--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1407,121 +1407,99 @@
   </style>
 
 
-<div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
-  <div style="width: 100%; margin: 60px 0 40px 0; clear: both; display: block; box-sizing: border-box;">
-    <table role="presentation" style="width: 100%; border-collapse: collapse; margin: 0; padding: 0; table-layout: fixed;">
-      <tr>
-        <td style="vertical-align: middle; padding: 0;">
-          <div style="height: 2px; background-color: #333333;"></div>
-        </td>
-        <td style="width: 1px; white-space: nowrap; padding: 0 15px;">
-          <div style="font-size: 13px; color: #ffffff; background-color: #333333; font-weight: 800; letter-spacing: 1.5px; text-transform: uppercase; height: 32px; line-height: 32px; padding: 0 25px; border-radius: 4px; box-sizing: border-box; text-align: center;">
-            Season Performance Analytics
-          </div>
-        </td>
-        <td style="vertical-align: middle; padding: 0;">
-          <div style="height: 2px; background-color: #333333;"></div>
-        </td>
-      </tr>
-    </table>
-  </div>
   
   
 
-<div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Inter', 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
-  <div class="roster-standings-section" style="width: 100%; margin-bottom: 40px; box-sizing: border-box;">
-    <div style="margin-bottom: 25px; box-sizing: border-box;">
-      <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #806600; padding-left: 15px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path><path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path><path d="M4 22h16"></path><path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path><path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path><path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path></svg>
+  <div class="roster-standings-section" style="width: 100%; margin-bottom: 50px; box-sizing: border-box;">
+    <div style="margin-bottom: 30px; box-sizing: border-box;">
+      <h3 style="font-size: 16px; color: #0c2340; margin: 0; border-bottom: 2px solid #0c2340; padding-bottom: 12px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; gap: 10px; box-sizing: border-box;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path><path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path><path d="M4 22h16"></path><path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path><path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path><path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path></svg>
         UTSA TEAM ROSTER METRICS 
-        <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(Freshman Season)</span>
+        <span style="font-size: 12px; color: #94a3b8; font-weight: 500; letter-spacing: 0px; text-transform: none;">(Freshman Season)</span>
       </h3>
     </div>
 
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; box-sizing: border-box; width: 100%;">
-      <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 10px;">Individual Scoring Avg.</span>
-        <span style="font-size: 22px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">72.0</span>
-        <div style="display: block; font-size: 18px; color: #64748b; margin-top: 4px; font-weight: 600;">Scoreboard Adj: 71.0</div>
-        <div style="display: inline-block; font-size: 11px; color: #806600; margin-top: 12px; font-weight: 700; background: rgba(128, 102, 0, 0.05); padding: 4px 12px; border-radius: 20px;">STATUS: 15-Round Cumulative</div>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 1px; background-color: #e2e8f0; border: 1px solid #e2e8f0; box-sizing: border-box; width: 100%;">
+      <div style="padding: 35px 25px; background: #ffffff; box-sizing: border-box; min-width: 0;">
+        <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 15px;">Individual Scoring Avg.</span>
+        <span style="font-size: 32px; font-weight: 900; color: #0c2340; letter-spacing: -1px; display: block;">72.0</span>
+        <div style="font-size: 16px; color: #475569; margin-top: 4px; font-weight: 700;">Scoreboard Adj: 71.0</div>
+        <div style="margin-top: 25px; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase; border-left: 3px solid #806600; padding-left: 10px;">STATUS: 15-Round Cumulative</div>
       </div>
-      <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 10px;">Scoring Summary</span>
-        <span style="font-size: 22px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">9 Under Par</span>
-        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 4px; font-weight: 600;">Out of 15 Rounds</div>
-        <div style="display: inline-block; font-size: 11px; color: #2b6cb0; margin-top: 12px; font-weight: 700; background: rgba(43, 108, 176, 0.05); padding: 4px 12px; border-radius: 20px;">STATUS: 15-Round Cumulative</div>
+      <div style="padding: 35px 25px; background: #ffffff; box-sizing: border-box; min-width: 0;">
+        <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 15px;">Scoring Summary</span>
+        <span style="font-size: 32px; font-weight: 900; color: #0c2340; letter-spacing: -1px; display: block;">9 Under Par</span>
+        <div style="font-size: 13px; color: #475569; margin-top: 4px; font-weight: 700;">Out of 15 Rounds</div>
+        <div style="margin-top: 25px; font-size: 10px; color: #2b6cb0; font-weight: 800; text-transform: uppercase; border-left: 3px solid #2b6cb0; padding-left: 10px;">STATUS: 15-Round Cumulative</div>
       </div>
-      <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 10px;">Academic Discipline</span>
-        <span style="font-size: 22px; font-weight: 900; color: #0c2340;">3.4 GPA</span>
-        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 4px; font-weight: 600;">Fall 2025 Semester</div>
-        <div style="display: inline-block; font-size: 12px; color: #10b981; margin-top: 12px; font-weight: 700; background: rgba(16, 185, 129, 0.05); padding: 4px 12px; border-radius: 20px;">METRIC: Fall Finalized</div>
+      <div style="padding: 35px 25px; background: #ffffff; box-sizing: border-box; min-width: 0;">
+        <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 15px;">Academic Discipline</span>
+        <span style="font-size: 32px; font-weight: 900; color: #0c2340; display: block;">3.4 GPA</span>
+        <div style="font-size: 13px; color: #475569; margin-top: 4px; font-weight: 700;">Fall 2025 Semester</div>
+        <div style="margin-top: 25px; font-size: 10px; color: #10b981; font-weight: 800; text-transform: uppercase; border-left: 3px solid #10b981; padding-left: 10px;">METRIC: Fall Finalized</div>
       </div>
     </div>
   </div>
 
   <div class="advanced-analysis-section" style="width: 100%; margin-bottom: 40px; box-sizing: border-box;">
-    <div style="margin-bottom: 25px; box-sizing: border-box;">
-      <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #0c2340; padding-left: 15px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
+    <div style="margin-bottom: 30px; box-sizing: border-box;">
+      <h3 style="font-size: 16px; color: #0c2340; margin: 0; border-bottom: 2px solid #0c2340; padding-bottom: 12px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; gap: 10px; box-sizing: border-box;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
         COMPETITIVE ANALYSIS 
-        <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(Freshman Season)</span>
+        <span style="font-size: 12px; color: #94a3b8; font-weight: 500; letter-spacing: 0px; text-transform: none;">(Freshman Season)</span>
       </h3>
     </div>
 
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; box-sizing: border-box; width: 100%;">
-      
-      <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 1px; background-color: #e2e8f0; border: 1px solid #e2e8f0; box-sizing: border-box; width: 100%;">
+      <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 35px 25px; background: #ffffff; box-sizing: border-box; min-width: 0;">
         <div>
-          <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Head-to-Head Record</span>
-          <span style="font-size: 24px; font-weight: 900; color: #0c2340;">289-98-12</span>
-          <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Win Rate: 72.4%</div>
+          <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 15px;">Head-to-Head Record</span>
+          <span style="font-size: 28px; font-weight: 900; color: #0c2340; display: block; letter-spacing: -0.5px;">289-98-12</span>
+          <div style="font-size: 15px; color: #111827; margin-top: 8px; font-weight: 800;">Win Rate: 72.4%</div>
         </div>
-        <div style="margin-top: auto;">
-          <div style="display: inline-block; font-size: 11px; color: #806600; margin-top: 15px; font-weight: 800; background: rgba(128, 102, 0, 0.08); padding: 4px 15px; border-radius: 25px;">STATUS: 15-Round Cumulative</div>
-        </div>
+        <div style="margin-top: 30px; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase; border-left: 3px solid #806600; padding-left: 10px;">STATUS: 15-Round Cumulative</div>
       </div>
 
-      <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
+      <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 35px 25px; background: #ffffff; box-sizing: border-box; min-width: 0;">
         <div>
-          <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Counting Score Record</span>
-          <span style="font-size: 24px; font-weight: 900; color: #0c2340; line-height: 1.2;">93.3%<br><span style="font-size: 15px;">Counting Score</span></span>
+          <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 15px;">Counting Score Record</span>
+          <span style="font-size: 28px; font-weight: 900; color: #0c2340; line-height: 1.1;">93.3%<br><span style="font-size: 16px; font-weight: 700; color: #64748b;">Counting Score</span></span>
         </div>
-        <div style="margin-top: auto;">
-          <div style="display: inline-block; font-size: 11px; color: #1a73e8; margin-top: 15px; font-weight: 800; background: rgba(26, 115, 232, 0.08); padding: 4px 15px; border-radius: 25px;">Metric: 14/15 Rounds Recorded</div>
-        </div>
+        <div style="margin-top: 30px; font-size: 10px; color: #1a73e8; font-weight: 800; text-transform: uppercase; border-left: 3px solid #1a73e8; padding-left: 10px;">Metric: 14/15 Rounds Recorded</div>
       </div>
 
-      <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
+      <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 35px 25px; background: #ffffff; box-sizing: border-box; min-width: 0;">
         <div>
-          <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Points Share (Clippd w)</span>
-          <span style="font-size: 30px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">32.78%</span>
-          <div style="margin-top: 14px; padding-top: 14px; border-top: 1px solid #edf2f7; display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
+          <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 15px;">Points Share (Clippd w)</span>
+          <span style="font-size: 36px; font-weight: 900; color: #0c2340; letter-spacing: -1.5px;">32.78%</span>
+          <div style="margin-top: 20px; padding-top: 20px; border-top: 1px dashed #cbd5e1; display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
             <div>
-              <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">(w) Points</div>
+              <div style="font-size: 9px; color: #64748b; font-weight: 800; text-transform: uppercase;">(w) Points</div>
               <div style="font-size: 14px; color: #0c2340; font-weight: 900;">168.24</div>
             </div>
             <div>
-              <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">Team Total</div>
+              <div style="font-size: 9px; color: #64748b; font-weight: 800; text-transform: uppercase;">Team Total</div>
               <div style="font-size: 14px; color: #0c2340; font-weight: 900;">513.29</div>
             </div>
             <div>
-              <div style="font-size: 9px; color: #64748b; font-weight: 900; text-transform: uppercase;">Scope</div>
+              <div style="font-size: 9px; color: #64748b; font-weight: 800; text-transform: uppercase;">Scope</div>
               <div style="font-size: 11px; color: #0c2340; font-weight: 900; margin-top: 2px;">15 Rounds</div>
             </div>
           </div>
         </div>
-        <div style="margin-top: auto;">
-          <div style="display: inline-block; font-size: 11px; color: #806600; margin-top: 15px; font-weight: 800; background: rgba(128, 102, 0, 0.1); padding: 4px 15px; border-radius: 25px;">STATUS: 15-Round Cumulative</div>
+        <div style="margin-top: 30px;">
+          <div style="display: inline-block; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase; border-left: 3px solid #806600; padding-left: 10px;">STATUS: 15-Round Cumulative</div>
         </div>
       </div>
-    </div> <div style="margin: 25px auto 40px auto; font-size: 11px; color: #94a3b8; font-weight: 700; line-height: 1.6; width: 100%; text-align: center; box-sizing: border-box; display: block; clear: both;">
-      Points Share represents the proportion of Clippd (w) Points relative to the team total.<br>
-      Note: Team Total includes participating team-member entries only (individual-only entries excluded).
     </div>
 
+    <div style="margin: 30px 0; padding: 20px; background-color: #f8fafc; border: 1px solid #e2e8f0; font-size: 11px; color: #64748b; font-weight: 600; line-height: 1.6; width: 100%; text-align: left; box-sizing: border-box; clear: both; display: block;">
+      <strong style="color: #0c2340; text-transform: uppercase; letter-spacing: 0.5px;">Metric Definition:</strong> Points Share represents the proportion of Clippd (w) Points relative to the team total.<br>
+      Note: Team Total includes participating team-member entries only (individual-only entries excluded).
+    </div>
   </div>
 </div>
   
