--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1406,8 +1406,20 @@
     }
   </style>
 
+<div style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  
+  <div style="display: flex; align-items: center; margin-bottom: 20px; border-left: 6px solid #c98a2e; padding-left: 15px;">
+    <h4 style="margin: 0; color: #c98a2e; font-size: 20px; font-weight: 800; letter-spacing: 0.5px;">Season Performance Analytics</h4>
+  </div>
 
-
+  <div style="background: #000000; border-radius: 8px 8px 0 0; padding: 18px 25px; display: flex; justify-content: space-between; align-items: center; box-sizing: border-box;">
+    <div style="display: flex; align-items: center;">
+      <span style="color: #ffffff; font-weight: 800; font-size: 16px; letter-spacing: 1px;">Season Performance Analytics</span>
+      <span style="margin-left: 15px; background: #e53e3e; color: white; font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 4px; letter-spacing: 0.5px;">Clippd W</span>
+    </div>
+  </div>
+</div>
+  
 <div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
   <div class="roster-standings-section" style="width: 100%; margin-bottom: 40px; box-sizing: border-box;">
