--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1428,26 +1428,28 @@
       </h3>
     </div>
 
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; box-sizing: border-box; width: 100%;">
-      <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 10px;">Individual Scoring Avg.</span>
-        <span style="font-size: 22px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">72.0</span>
-        <div style="display: block; font-size: 18px; color: #64748b; margin-top: 4px; font-weight: 600;">Scoreboard Adj: 71.0</div>
-        <div style="display: inline-block; font-size: 11px; color: #806600; margin-top: 12px; font-weight: 700; background: rgba(128, 102, 0, 0.05); padding: 4px 12px; border-radius: 20px;">STATUS: 15-Round Cumulative</div>
-      </div>
-      <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 10px;">Scoring Summary</span>
-        <span style="font-size: 22px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">9 Under Par</span>
-        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 4px; font-weight: 600;">Out of 15 Rounds</div>
-        <div style="display: inline-block; font-size: 11px; color: #2b6cb0; margin-top: 12px; font-weight: 700; background: rgba(43, 108, 176, 0.05); padding: 4px 12px; border-radius: 20px;">STATUS: 15-Round Cumulative</div>
-      </div>
-      <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 10px;">Academic Discipline</span>
-        <span style="font-size: 22px; font-weight: 900; color: #0c2340;">3.4 GPA</span>
-        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 4px; font-weight: 600;">Fall 2025 Semester</div>
-        <div style="display: inline-block; font-size: 12px; color: #10b981; margin-top: 12px; font-weight: 700; background: rgba(16, 185, 129, 0.05); padding: 4px 12px; border-radius: 20px;">METRIC: Fall Finalized</div>
-      </div>
-    </div>
+   <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; box-sizing: border-box; width: 100%;">
+  <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
+    <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 10px;">Individual Scoring Avg.</span>
+    <span style="font-size: 22px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">72.0</span>
+    <div style="display: block; font-size: 18px; color: #64748b; margin-top: 4px; font-weight: 600;">Scoreboard Adj: 71.0</div>
+    <div style="display: inline-block; font-size: 11px; color: #806600; margin-top: 12px; font-weight: 700; background: rgba(128, 102, 0, 0.05); padding: 4px 12px; border-radius: 20px;">STATUS: 15-Round Cumulative</div>
+  </div>
+
+  <div style="padding: 25px; background: #f0f4f8; border-radius: 18px; text-align: center; border: 2px solid #0c2340; box-shadow: 0 4px 15px rgba(12, 35, 64, 0.1); box-sizing: border-box; min-width: 0; position: relative;">
+    <span style="display: block; font-size: 11px; color: #0c2340; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 10px;">Scoring Summary</span>
+    <span style="font-size: 22px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">9 Under Par</span>
+    <div style="display: block; font-size: 12px; color: #0c2340; margin-top: 4px; font-weight: 700; opacity: 0.8;">Out of 15 Rounds</div>
+    <div style="display: inline-block; font-size: 11px; color: #ffffff; margin-top: 12px; font-weight: 700; background: #0c2340; padding: 4px 12px; border-radius: 20px;">STATUS: 15-Round Cumulative</div>
+  </div>
+
+  <div style="padding: 25px; background: #ffffff; border-radius: 18px; text-align: center; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0,0,0,0.04); box-sizing: border-box; min-width: 0;">
+    <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 10px;">Academic Discipline</span>
+    <span style="font-size: 22px; font-weight: 900; color: #0c2340;">3.4 GPA</span>
+    <div style="display: block; font-size: 12px; color: #64748b; margin-top: 4px; font-weight: 600;">Fall 2025 Semester</div>
+    <div style="display: inline-block; font-size: 12px; color: #10b981; margin-top: 12px; font-weight: 700; background: rgba(16, 185, 129, 0.05); padding: 4px 12px; border-radius: 20px;">METRIC: Fall Finalized</div>
+  </div>
+</div>
   </div>
 
   <div class="advanced-analysis-section" style="width: 100%; margin-bottom: 40px; box-sizing: border-box;">
