--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1428,33 +1428,33 @@
       </h3>
     </div>
 
-   <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 16px; box-sizing: border-box; width: 100%;">
+   <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 16px; box-sizing: border-box; width: 100%; align-items: stretch;">
   
   <div style="display: flex; flex-direction: column; padding: 24px; background: #ffffff; border-radius: 12px; border: 1px solid #e5e7eb; box-shadow: 0 2px 8px rgba(0,0,0,0.02); box-sizing: border-box; min-width: 0; text-align: left;">
     <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.2px; margin-bottom: 8px;">Individual Scoring Avg.</span>
     <div style="border-bottom: 1px solid #f1f5f9; padding-bottom: 12px; margin-bottom: 12px;">
-      <span style="font-size: 22px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">72.0</span>
+      <span style="font-size: 26px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">71.0 (Adj)</span>
     </div>
-    <div style="font-size: 14px; color: #64748b; font-weight: 600;">Scoreboard Adj: 71.0</div>
-    <div style="margin-top: auto; padding-top: 16px; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase;">STATUS: 15-Round Cumulative</div>
+    <div style="font-size: 15px; color: #64748b; font-weight: 600;">Raw Avg: 72.0</div>
+    <div style="margin-top: auto; padding-top: 24px; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">STATUS: 15-Round Cumulative</div>
   </div>
 
   <div style="display: flex; flex-direction: column; padding: 24px; background: #0c2340; border-radius: 12px; box-shadow: 0 10px 25px rgba(12, 35, 64, 0.15); box-sizing: border-box; min-width: 0; text-align: left; position: relative;">
     <span style="display: block; font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; letter-spacing: 1.2px; margin-bottom: 8px;">Scoring Summary</span>
     <div style="border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 12px; margin-bottom: 12px;">
-      <span style="font-size: 22px; font-weight: 900; color: #ffffff; letter-spacing: -0.5px;">9 Under Par</span>
+      <span style="font-size: 26px; font-weight: 900; color: #ffffff; letter-spacing: -0.5px;">9 Under Par</span>
     </div>
-    <div style="font-size: 14px; color: #f15a22; font-weight: 700;">Out of 15 Rounds</div>
-    <div style="margin-top: auto; padding-top: 16px; font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase;">STATUS: 15-Round Cumulative</div>
+    <div style="font-size: 15px; color: #f15a22; font-weight: 700;">Out of 15 Rounds</div>
+    <div style="margin-top: auto; padding-top: 24px; font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">STATUS: 15-Round Cumulative</div>
   </div>
 
   <div style="display: flex; flex-direction: column; padding: 24px 24px 20px 24px; background: #ffffff; border-radius: 12px; border: 1px solid #e5e7eb; border-bottom: 4px solid #10b981; box-sizing: border-box; min-width: 0; text-align: left;">
     <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.2px; margin-bottom: 8px;">Academic Discipline</span>
     <div style="border-bottom: 1px solid #f1f5f9; padding-bottom: 12px; margin-bottom: 12px;">
-      <span style="font-size: 22px; font-weight: 900; color: #0c2340;">3.4 GPA</span>
+      <span style="font-size: 26px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">3.4 GPA</span>
     </div>
-    <div style="font-size: 14px; color: #64748b; font-weight: 600;">Fall 2025 Semester</div>
-    <div style="margin-top: auto; padding-top: 16px; font-size: 10px; color: #10b981; font-weight: 800; text-transform: uppercase;">METRIC: Fall Finalized</div>
+    <div style="font-size: 15px; color: #64748b; font-weight: 600;">Fall 2025 Semester</div>
+    <div style="margin-top: auto; padding-top: 24px; font-size: 10px; color: #10b981; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">METRIC: Fall Finalized</div>
   </div>
 
 </div>
