--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1522,10 +1522,10 @@
     </div>
   </div>
 
-  <div style="margin: 25px auto 0 auto; font-size: 11px; color: #94a3b8; font-weight: 700; line-height: 1.6; width: 100%; text-align: left; box-sizing: border-box; display: block; clear: both; padding-left: 5px;">
-    Points Share represents the proportion of Clippd (w) Points relative to the team total.<br>
-    Note: Team Total includes participating team-member entries only (individual-only entries excluded).
-  </div>
+<div style="margin: 25px auto 0 auto; font-size: 11px; color: #94a3b8; font-weight: 700; line-height: 1.6; width: 100%; text-align: center; box-sizing: border-box; display: block; clear: both;">
+  Points Share represents the proportion of Clippd (w) Points relative to the team total.<br>
+  Note: Team Total includes participating team-member entries only (individual-only entries excluded).
+</div>
 </div>
 </div>
   
