--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -450,7 +450,7 @@
         </div>
     </div>
 
-    <div class="legal-pad-wrapper" style="width: 100%; margin: 0 0 40px 0; position: relative; box-sizing: border-box;">
+    <div class="legal-pad-wrapper" style="width: 100%; max-width: 880px; margin: 0 auto 40px auto; position: relative; box-sizing: border-box;">
         <div style="width: 100%; height: 35px; background: #334155; border-radius: 20px 20px 0 0; position: relative; z-index: 2; box-shadow: inset 0 -5px 10px rgba(0,0,0,0.2); border: 1px solid #1e293b; box-sizing: border-box;">
             <div style="display: flex; justify-content: center; gap: 40px; padding-top: 10px; box-sizing: border-box;">
                 <div style="width: 12px; height: 12px; background: #1e293b; border-radius: 50%; box-sizing: border-box;"></div>
@@ -462,7 +462,7 @@
         <div class="legal-pad-content" style="background: #fff9c4; background-image: linear-gradient(#e5e0a3 1px, transparent 1px); background-size: 100% 28px; border-left: 1px solid #e5e0a3; border-right: 1px solid #e5e0a3; border-bottom: 4px solid #d4cf92; border-radius: 0 0 60px 60px; padding: 40px; position: relative; box-shadow: 0 15px 30px rgba(0,0,0,0.07); display: flex; flex-direction: column; box-sizing: border-box; width: 100%;">
             
             <div style="margin-bottom: 45px; position: relative; box-sizing: border-box;">
-               <style>//*앵커*//</style> 
+                <style>//*앵커*//</style> 
                 <div id="Current-Focus" style="display: inline-block; box-sizing: border-box;">
                 <span style="font-size: 14px; color: #d32f2f; font-weight: 700; text-transform: uppercase; box-sizing: border-box;">Date: Feb 07, 2026</span>
                 </div>
@@ -524,6 +524,9 @@
             </div>
         </div>
     </div>
+</div>
+
+  
 
     <div class="performance-analysis-wrapper" style="width: 100%; margin: 0 0 30px 0; padding: 0; background: transparent; box-sizing: border-box;">
         <div style="background: #ffffff; border: 1.5px solid #eeeeee; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); overflow: hidden; box-sizing: border-box; width: 100%;">
