--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -439,9 +439,9 @@
 
 
 
-<div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="master-container" style="width: 900px; max-width: 900px; margin: 0 auto; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
-    <div class="current-focus-section" style="width: 100%; max-width: 900px; margin: 30px auto 40px auto; padding: 0 10px; box-sizing: border-box;">
+    <div class="current-focus-section" style="width: 100%; margin: 30px 0 40px 0; padding: 0; box-sizing: border-box;">
         <a id="current-focus" style="display: block; position: relative; top: -100px; visibility: hidden;"></a>
         <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; text-align: center; box-sizing: border-box;">
             <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase; box-sizing: border-box;">
@@ -450,7 +450,7 @@
         </div>
     </div>
 
-    <div class="legal-pad-wrapper" style="width: calc(100% - 20px); max-width: 880px; margin: 0 auto 40px auto; position: relative; box-sizing: border-box;">
+    <div class="legal-pad-wrapper" style="width: 100%; margin: 0 auto 40px auto; position: relative; box-sizing: border-box;">
         <div style="width: 100%; height: 35px; background: #334155; border-radius: 20px 20px 0 0; position: relative; z-index: 2; box-shadow: inset 0 -5px 10px rgba(0,0,0,0.2); border: 1px solid #1e293b; box-sizing: border-box;">
             <div style="display: flex; justify-content: center; gap: 40px; padding-top: 10px; box-sizing: border-box;">
                 <div style="width: 12px; height: 12px; background: #1e293b; border-radius: 50%; box-sizing: border-box;"></div>
@@ -524,6 +524,7 @@
             </div>
         </div>
     </div>
+
 
 
 
