--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -459,7 +459,7 @@
             </div>
         </div>
         
-        <div class="legal-pad-content" style="background: #fff9c4; background-image: linear-gradient(#e5e0a3 1px, transparent 1px); background-size: 100% 28px; border-left: 1px solid #e5e0a3; border-right: 1px solid #e5e0a3; border-bottom: 4px solid #d4cf92; border-radius: 0 0 60px 60px; padding: 40px; position: relative; box-shadow: 0 15px 30px rgba(0,0,0,0.07); display: flex; flex-direction: column; box-sizing: border-box; width: 100%; overflow: hidden;">
+        <div class="legal-pad-content" style="background: #fff9c4; background-image: linear-gradient(#e5e0a3 1px, transparent 1px); background-size: 100% 28px; border-left: 1px solid #e5e0a3; border-right: 1px solid #e5e0a3; border-bottom: 4px solid #d4cf92; border-radius: 0 0 60px 60px; padding: 40px; position: relative; box-shadow: 0 15px 30px rgba(0,0,0,0.07); display: flex; flex-direction: column; box-sizing: border-box; width: 100%; overflow: hidden; table-layout: fixed;">
             
             <div style="margin-bottom: 45px; position: relative; box-sizing: border-box; width: 100%;">
                 <style>//*앵커*//</style> 
@@ -473,7 +473,7 @@
 
             <div class="memo-body" style="display: flex; flex-direction: column; gap: 28px; width: 100%; position: relative; z-index: 1; margin-bottom: 50px; box-sizing: border-box;">
                 <div style="display: flex; gap: 15px; align-items: flex-start; box-sizing: border-box; width: 100%;">
-                    <span style="font-size: 20px; color: #0c2340; font-weight: 900; box-sizing: border-box; flex-shrink: 0;">01.</span>
+                    <span style="font-size: 20px; color: #0c2340; font-weight: 900; box-shrink: 0;">01.</span>
                     <div style="box-sizing: border-box; flex: 1; min-width: 0;">
                         <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">R3 Technical Feedback</h4>
                         <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500; box-sizing: border-box; word-break: keep-all;">
@@ -484,7 +484,7 @@
                 </div>
 
                 <div style="display: flex; gap: 15px; align-items: flex-start; box-sizing: border-box; width: 100%;">
-                    <span style="font-size: 20px; color: #0c2340; font-weight: 900; box-sizing: border-box; flex-shrink: 0;">02.</span>
+                    <span style="font-size: 20px; color: #0c2340; font-weight: 900; box-shrink: 0;">02.</span>
                     <div style="box-sizing: border-box; flex: 1; min-width: 0;">
                         <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">Corrective Training</h4>
                         <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500; box-sizing: border-box; word-break: keep-all;">
@@ -524,6 +524,7 @@
             </div>
         </div>
     </div>
+
 
 
 
