--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -462,14 +462,16 @@
         <div class="legal-pad-content" style="width: 100%; background: #fff9c4; background-image: linear-gradient(#e5e0a3 1px, transparent 1px); background-size: 100% 28px; border-left: 1px solid #e5e0a3; border-right: 1px solid #e5e0a3; border-bottom: 4px solid #d4cf92; border-radius: 0 0 60px 60px; position: relative; box-shadow: 0 20px 40px rgba(0,0,0,0.18); display: flex; flex-direction: column; box-sizing: border-box; overflow: hidden;">
             
             <div style="padding: 40px; box-sizing: border-box; width: 100%;">
-                <div style="margin-bottom: 45px; position: relative; box-sizing: border-box; width: 100%;">
+                <div style="margin-bottom: 45px; width: 100%; box-sizing: border-box;">
                     <style>//*앵커*//</style> 
-                    <div id="Current-Focus" style="display: inline-block; box-sizing: border-box;">
+                    <div id="Current-Focus" style="margin-bottom: 5px; box-sizing: border-box;">
                         <span style="font-size: 14px; color: #d32f2f; font-weight: 700; text-transform: uppercase; box-sizing: border-box;">Date: Feb 07, 2026</span>
                     </div>
-                    <h3 style="margin: 10px 0 0 0; color: #0c2340; font-size: 24px; font-weight: 900; text-transform: uppercase; border-bottom: 2px solid #0c2340; display: inline-block; box-sizing: border-box; max-width: 100%;">
-                        Performance Analysis & Training Plan
-                    </h3>
+                    <div style="border-bottom: 2px solid #0c2340; display: inline-block; max-width: 100%; box-sizing: border-box;">
+                        <h3 style="margin: 0; padding-bottom: 5px; color: #0c2340; font-size: 24px; font-weight: 900; text-transform: uppercase; box-sizing: border-box; display: block;">
+                            Performance Analysis & Training Plan
+                        </h3>
+                    </div>
                 </div>
 
                 <div class="memo-body" style="display: flex; flex-direction: column; gap: 28px; width: 100%; position: relative; z-index: 1; margin-bottom: 50px; box-sizing: border-box;">
@@ -525,8 +527,7 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
+
 
     
 
