--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ gtag('config', 'G-H1JW8YBDZ8');
           </div>
           <div style="display: flex; justify-content: center; align-items: center;">
             <div style="display: flex; width: 140px; justify-content: space-between; align-items: center;">
-              <span style="color: #cbd5e1; font-size: 19px; font-weight: 800; width: 40px; text-align: center;">-</span>
+              <span style="color: #e74c3c; font-size: 19px; font-weight: 800; width: 40px; text-align: center;">68 (-4)</span>
               <span style="color: #cbd5e1; font-size: 19px; font-weight: 800; width: 40px; text-align: center;">-</span>
               <span style="color: #cbd5e1; font-size: 19px; font-weight: 800; width: 40px; text-align: center;">-</span>
             </div>
