--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -370,9 +370,9 @@
 
         <div style="display: flex; justify-content: space-around; flex-wrap: wrap; gap: 20px;">
           <div style="text-align: center; flex: 1; min-width: 120px;">
-            <div style="font-size: 0.85em; color: #E31837; font-weight: 600; margin-bottom: 5px;">QUALIFIER 1</div>
-            <div style="font-size: 1.05em; font-weight: 600; color: #0c2340;">Feb 10 (Tue)</div>
-            <div style="font-size: 0.9em; color: #666; font-family: 'Montserrat', sans-serif;">1:00 PM</div>
+            <div style="font-size: 0.85em; color: #999; font-weight: 600; margin-bottom: 5px;">QUALIFIER 1</div>
+            <div style="font-size: 1.05em; font-weight: 600; color: #999;">Feb 10 (Tue)</div>
+            <div style="font-size: 0.9em; color: #ccc; font-family: 'Montserrat', sans-serif;">1:00 PM</div>
           </div>
           
           <div style="text-align: center; flex: 1; min-width: 120px; border-left: 1px solid #eee; border-right: 1px solid #eee;">
