--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -979,7 +979,7 @@
 <div style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
   <div style="display: flex; align-items: center; margin-bottom: 20px; border-left: 6px solid #c98a2e; padding-left: 15px;">
-    <h4 style="margin: 0; color: #c98a2e; font-size: 20px; font-weight: 800; letter-spacing: 0.5px;">Off-Season / Elite Summer Series</h4>
+    <h4 style="margin: 0; color: #c98a2e; font-size: 20px; font-weight: 800; letter-spacing: 0.5px;">Off-Season Competition Plan / EAGS, USGA, FMG Events</h4>
   </div>
 
   <div style="background: #000000; border-radius: 8px 8px 0 0; padding: 18px 25px; display: flex; justify-content: space-between; align-items: center; box-sizing: border-box;">
@@ -1014,11 +1014,11 @@
 
          <tr style="border-bottom: 1px solid #edf2f7;">
           <td style="padding: 20px 25px; vertical-align: top;">
-            <div style="font-weight: 700; font-size: 14px; color: #1a202c;">Jul 20 - 21</div>
+            <div style="font-weight: 700; font-size: 14px; color: #1a202c;">Jul 16 - 19</div>
           </td>
           <td style="padding: 20px 25px;">
-            <div style="font-weight: 800; color: #2d3748; font-size: 16px;">US Amateur Qualifying</div>
-            <div style="font-size: 12px; color: #718096; margin-top: 4px;">Regional Site Selection</div>
+            <div style="font-weight: 800; color: #2d3748; font-size: 16px;">Mexican Amateur Championship</div>
+            <div style="font-size: 12px; color: #718096; margin-top: 4px;">USGA | FMG</div>
           </td>
           <td style="padding: 20px 25px; text-align: center;">
             <span style="font-size: 12px; font-weight: 700; color: #4a5568;">SCHEDULED</span>
