--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1018,7 +1018,7 @@
           </td>
           <td style="padding: 20px 25px;">
             <div style="font-weight: 800; color: #2d3748; font-size: 16px;">Mexican Amateur Championship</div>
-            <div style="font-size: 12px; color: #718096; margin-top: 4px;">USGA | FMG</div>
+            <div style="font-size: 12px; color: #718096; margin-top: 4px;">USGA | FMG, Club Campestre de la CD. Mexico</div>
           </td>
           <td style="padding: 20px 25px; text-align: center;">
             <span style="font-size: 12px; font-weight: 700; color: #4a5568;">SCHEDULED</span>
@@ -1408,7 +1408,7 @@
     }
   </style>
 
-<div style="max-width: 900px; margin: -20px auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div style="width: 100%; margin: -20px auto 40px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="background: #F15A22; border-radius: 8px 8px 0 0; padding: 18px 25px; display: flex; justify-content: space-between; align-items: center; box-sizing: border-box;">
     <div style="display: flex; align-items: center;">
       <span style="color: #ffffff; font-weight: 800; font-size: 16px; letter-spacing: 1px;">Freshman Season Performance Analytics</span>
