--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1435,8 +1435,8 @@
   <div style="display: flex; flex-direction: column; padding: 24px; background: #ffffff; border-radius: 12px; border: 1px solid #e5e7eb; box-shadow: 0 2px 8px rgba(0,0,0,0.02); box-sizing: border-box; min-width: 0; text-align: left;">
     <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.2px; margin-bottom: 8px;">Individual Scoring Avg.</span>
     <div style="border-bottom: 1px solid #f1f5f9; padding-bottom: 12px; margin-bottom: 12px;">
-      <span style="font-size: 26px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">71.0 (Scoreboard Adj.)</span>
-    </div>
+  <span style="font-size: 26px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;"> 71.0 <span style="font-size: 15px; font-weight: 900;">(Scoreboard Adj.)</span>   </span>
+</div>
     <div style="font-size: 15px; color: #64748b; font-weight: 600;">Raw Avg: 72.0</div>
     <div style="margin-top: auto; padding-top: 24px; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">STATUS: 15-Round Cumulative</div>
   </div>
